# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: my-check.yml
page_analyzer/: app.py  validator.py
page_analyzer/templates/: index.html  layout.html  site_detail.html  sites.html
