[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergei Dmitriev <graywrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
validators = "^0.22.0"
requests = "^2.31.0"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
